--- a/Kos/scss/_common.scss
+++ b/Kos/scss/_common.scss
@@ -1,10 +1,11 @@
 /* 全域變數 寬度 */
-$xxxl: 1920px;
+$xxxl: 1921px;
 $xxl: 1660px;
 $xl: 1400px;
 $lg: 992px;
 $md: 768px;
 $sm: 576px;
+$xs: 0px;
 
 /* 全域變數 顏色 */
 $backgroundColor: #f2f2f2;  // 背景顏色
@@ -87,7 +88,7 @@ a {
     @media (min-width: $xl) {
         width: 75%;
     }
-    @media (min-width: $lg) {
+    @media (min-width: $lg) and (max-width: $xl) {
         width: 85%;
     }
 }
@@ -110,6 +111,9 @@ a {
         img {
             height: 20px;
         }
+        :hover {
+            color: $textColor !important;
+        }
     }
     img {
         height: 15px;
@@ -127,7 +131,9 @@ a {
 
 /* 上方導覽列 */
 .topbar {
-    @include flex(center);
+    // @include flex(center);
+    display: flex;
+    justify-content: center;
     @include fixedPosition(top, 0px, left, 0px);
 	background-color: transparent;
 	width: 100%;
@@ -135,20 +141,22 @@ a {
 	z-index: 10;
 	transition: .2s;
     .wrapper {
-        @include flex(center);
+        @include flex(center, center);
     }
     ul {
         @include flex(center, center);
         list-style: none;
         float: left;
-        display: inline;
         margin: 0px;
         padding: 0px;
         @media (min-width: $xl) {
             width: 30%;
         }
-        @media (min-width: $lg) {
+        @media (min-width: $lg) and (max-width: $xl) {
             width: 33%;
+        }
+        @media (max-width: $lg) {
+            display: none;
         }
     }
     ul:first-child {
@@ -276,12 +284,22 @@ a {
 	height: 18px;
 	padding: 2px;
 	font-size: 1.2rem;
-	color: #000;
+	color: #000 !important;
 	text-align: center;
 	margin-top: -11px;
 	margin-left: 8px;
 	margin-right: 20px;
 	font-weight: bold;
+    :hover {
+        color: $textColor;
+    }
+}
+
+#mobile-cart {
+    color: $textColor;
+    .hover {
+        color: $textColor !important;
+    }
 }
 
 /* 購物車選單 */
@@ -330,10 +348,10 @@ a {
     @media (min-width: $xxl) {
         @include cartPanel(42vw, 100vh, 20px, 80px);
     }
-    @media (min-width: $xl) {
+    @media (min-width: $xl) and (max-width: $xxl) {
         @include cartPanel(42vw, 100vh, 20px, 60px);
     }
-    @media (min-width: 992px) {
+    @media (min-width: 992px) and (max-width: $xl) {
         @include cartPanel(55vw, 100vh, 20px, 60px);
     }
 }
@@ -465,7 +483,7 @@ a {
 
 /* 購物車內容總和 */
 .cart-content-total {
-    @include flex(start, center);
+    @include flex(flex-start, center);
 	height: 50px;
 	width: 100%;
 	border-top: 3px solid #000;
@@ -486,7 +504,7 @@ a {
 
 /* 購物車底部 */
 .cart-footer {
-    @include flex(end, center);
+    @include flex(flex-end, center);
 	width: 100%;
 	height: 70px;
     a {
@@ -497,26 +515,54 @@ a {
     }
 }
 
-/* 淡入效果 */
-@keyframes fadein{
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+
+
+@mixin keyframes($animation-name) {
+    @-webkit-keyframes #{$animation-name} {
+        @content;
+    }
+    @-moz-keyframes #{$animation-name} {
+        @content;
+    }  
+    @-ms-keyframes #{$animation-name} {
+        @content;
+    }
+    @-o-keyframes #{$animation-name} {
+        @content;
+    }  
+    @keyframes #{$animation-name} {
+        @content;
+    }
+}
+
+@mixin animation($str) {
+    -webkit-animation: #{$str};
+    -moz-animation: #{$str};
+    -ms-animation: #{$str};
+    -o-animation: #{$str};
+    animation: #{$str};      
 }
 
 /* 淡入效果 */
-@-webkit-keyframes fadein{
+@include keyframes(fadein) {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
 
 /* 淡出效果 */
-@keyframes fadeout{
-    0% { opacity: 1; }
-    100% { opacity: 0; }
+@include keyframes(fadein) {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
-/* 淡出效果 */
-@-webkit-keyframes fadeout{
-    0% { opacity: 1; }
-    100% { opacity: 0; }
+/* 購物車提示出現 */
+@include keyframes(showhint) {
+    0% { top: -255px; }
+    100% { top: 0px; }
+}
+
+/* 購物車提示消失 */
+@include keyframes(hidehint) {
+    0% { top: 0px; }
+    100% { top: -255px; }
 }
