--- a/Kos/scss/shop.scss
+++ b/Kos/scss/shop.scss
@@ -2,70 +2,57 @@
 
 /* 商店區塊 */
 .content {
+    // @include flex(center);
+    display: flex;
+    justify-content: center;
 	width: 100%;
-	display: flex;
-	justify-content: center;
 }
 
 /* 商店標題 */
 .shop-title {
-    @media (min-width: 992px) {  /* LG XL XXL */
+    @include flex(flex-start, center);
+    margin-top: 40px;
+    width: 100%;
+    height: 80px;
+    font-weight: bold;
+    border-bottom: 4px solid #000;
+    display: flex;
+    align-items: center;
+    @media (min-width: $lg) {
         margin-top: 60px;
-        width: 100%;
         height: 100px;
-        font-weight: bold;
-        border-bottom: 4px solid #000;
-        display: flex;
-        align-items: center;
-    }
-    @media (max-width: 991.98px) {  /* MD 以下 */
-        margin-top: 40px;
-        width: 100%;
-        height: 80px;
-        font-weight: bold;
-        border-bottom: 4px solid #000;
-        display: flex;
-        align-items: center;
     }
 }
 
 /* 商店外層 */
 .shop-wrapper {
-    @media (min-width: 992px) {  /* LG XL XXL */
-        width: 100%;
+    width: 100%;
+    margin-top: 10px;
+    height: calc(100vh - 135px);
+    @media (min-width: $lg) {
         margin-top: 40px;
         height: calc(100vh - 204px);
-    }
-    @media (max-width: 991.98px) {  /* MD 以下 */
-        width: 100%;
-        margin-top: 10px;
-        height: calc(100vh - 135px);
     }
 }
 
 /* 商店選單 */
 .shop-menu {
-    @media (min-width: 992px) {  /* LG XL XXL */
+    display: none;
+    @media (min-width: $lg) {
         width: 20%;
         height: 100%;
         float: left;
-    }
-    @media (max-width: 991.98px) {  /* MD 以下 */
-        display: none;
+        display: block;
     }
 }
 
 /* 商店內容區塊 */
 .shop-content {
-    @media (min-width: 992px) {  /* LG XL XXL */
+    width: 100%;
+    height: 100%;
+    float: left;
+    @media (min-width: $lg) {
         width: 80%;
-        height: 100%;
-        float: left;
-    }
-    @media (max-width: 991.98px) {  /* MD 以下 */
-        width: 100%;
-        height: 100%;
-        float: left;
     }
 }
 
@@ -95,90 +82,58 @@
     width: 100%;
     height: 60px;
     .product-all {  /* 手機板商品選單 */
-        @media (min-width: 992px) {  /* LG XL XXL */
-            width: 50%;
-            height: 100%;
-            float: left;
+        @include flex(flex-start, center);
+        width: 50%;
+        height: 100%;
+        float: left;
+        font-weight: bold;
+        @media (min-width: $lg) {
             display: none;
-            justify-content: start;
-            align-items: center;
-            font-weight: bold;
-        }
-        @media (max-width: 991.98px) {  /* MD 以下 */
-            width: 50%;
-            height: 100%;
-            float: left;
-            display: flex;
-            justify-content: start;
-            align-items: center;
-            font-weight: bold;
         }
     }
     .product-sort {  /* 排序選單 */
-        @media (min-width: 992px) {  /* LG XL XXL */
+        @include flex(flex-end, center);
+        width: 50%;
+        float: left;
+        font-weight: bold;
+        @media (min-width: $lg) {
             width: 100%;
-            height: 100%;
-            float: left;
-            display: flex;
-            justify-content: end;
-            align-items: center;
-            font-weight: bold;
-        }
-        @media (max-width: 991.98px) {  /* MD 以下 */
-            width: 50%;
-            height: 100%;
-            float: left;
-            display: flex;
-            justify-content: end;
-            align-items: center;
-            font-weight: bold;
         }
     }
 }
 
 /* 商品 */
 .product-area {
-    @media (min-width: 991.98px) {  /* LG XL XXL */
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    height: calc(100% - 60px);
+    overflow-y: auto;
+    @media (min-width: $lg) {  
         width: 100%;
-        height: calc(100% - 60px);
-        overflow-y: auto;
+        margin-left: 0px;
     }
-    @media (max-width: 991.98px) {  /* MD以下 */
-        width: calc(100% + 30px);
-        margin-left: -15px;
-        height: calc(100% - 60px);
-        overflow-y: auto;
-    }
-    .product-item {  /* 商品 */
+    .product-item {
         float: left;
-        @media (min-width: 991.98px) {  /* LG XL XXL */
+        width: calc(50% - 30px);
+        margin: 0px 15px 40px 15px;
+        @media (min-width: $lg) {
             width: calc((100% - 90px) / 3);
             margin: 0px 0px 40px 30px;
         }
-        @media (max-width: 991.98px) {  /* MD以下 */
-            width: calc(50% - 30px);
-            float: left;
-            margin: 0px 15px 40px 15px;
-        }
-        img {  /* 商品圖片 */
+        img {
             object-fit: cover;
             width: 100%;
             margin-bottom: 10px;
-            @media (min-width: 1660px) {  /* XXL */
+            height: 250px;
+            @media (min-width: 1660px) {
                 height: 380px;
             }
-            @media (max-width: 1399.98px) {  /* LG XL */
-                height: 250px;
-            }
-            @media (max-width: 991.98px) {  /* MD */
-                height: 250px;
-            }
         }
-        .product-name {  /* 商品名稱 */
+        .product-name {
             float: left;
             font-weight: bold;
         }
-        .product-price {  /* 商品價格 */
+        .product-price {
             float: right;
             font-weight: bold;
         }
