--- a/Kos/scss/page.scss
+++ b/Kos/scss/page.scss
@@ -135,6 +135,18 @@
     box-sizing: border-box;
     display: block;
     overflow: auto;
+    .form-col-40 {
+        float: left;
+        box-sizing: border-box;
+        @media (min-width: $lg) {
+            width: 40%;
+            margin-bottom: 25px;
+        }
+        @media (max-width: $lg) {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+    }
     .form-col-50 {
         float: left;
         box-sizing: border-box;
@@ -142,6 +154,17 @@
         @media (min-width: $lg) {
             width: 50%;
             padding: 0 40px;
+        }
+        @media (max-width: $lg) {
+            width: 100%;
+        }
+    }
+    .form-col-60 {
+        float: left;
+        box-sizing: border-box;
+        margin-bottom: 25px;
+        @media (min-width: $lg) {
+            width: 60%;
         }
         @media (max-width: $lg) {
             width: 100%;
@@ -172,6 +195,9 @@
         font-size: 1.3rem;
         box-sizing: border-box;
     }
+    textarea.form-input {
+        padding: 10px 0px 10px 0px !important;
+    }
     /* 輸入框:focus */
     .form-input:focus {
         outline: none;
@@ -183,7 +209,7 @@
     .form-icon {
         position: absolute;
         right: 12px;
-        top: 45px;
+        top: 49px;
     }
     .form-input.search {
         font-size: 2rem;
@@ -193,7 +219,7 @@
     .form-search-icon {
         position: absolute;
         right: 8px;
-        top: 30px;
+        top: 33px;
     }
 }
 
@@ -202,7 +228,54 @@ a.form-submit {
     padding-bottom: 10px;
     border-bottom: 4px #000 solid;
     font-weight: bold;
-    :hover {
-        color: $textColorHover;
+}
+
+
+a.form-submit:hover {
+    color: $textColor;
+    -webkit-animation: pulse .5s;
+    animation: pulse .5s;
+}
+
+.profile-photo-area {
+    display: block;
+    overflow: auto;
+    float: left;
+    width: 100%;
+    @media (min-width: $lg) {
+        width: 40%;
+    }
+    .profile-photo {
+        @media (min-width: $lg) {
+            width: 350px;
+            height: 350px;
+        }
+        @media (max-width: $lg) {
+            width: 100%;
+            height: 350px;
+            margin-bottom: 40px;
+        }
+        > img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+.profile-area {
+    display: block;
+    overflow: auto;
+    float: left;
+    width: 100%;
+    @media (min-width: $lg) {
+        width: 60%;
+    }
+    .user-name {
+        margin-top: -6px;
+        font-weight: bold;
+    }
+    .form-title {
+        font-weight: bold;
     }
 }
