--- a/Kos/scss/page.scss
+++ b/Kos/scss/page.scss
@@ -10,6 +10,7 @@
     justify-content: center;
 	width: 100%;
     line-height: 2.2rem;
+    margin-bottom: 60px;
 }
 
 /* About 標題區塊 */
@@ -272,7 +273,6 @@ a.form-submit:hover {
         width: 60%;
     }
     .user-name {
-        margin-top: -6px;
         font-weight: bold;
     }
     .form-title {
